--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,8 @@
     </head> -->
 
     <body>
+        <link rel="stylesheet" type="text/css" href="/css/home.css">
+        
         <!-- <%- include('_header'); %> -->
 
         <h1>Codeial / <%= title %></h1>
