--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,36 @@
 <header>
-    Page Header
+
+    <link type="text/css" rel="stylesheet" href="/css/header.css">
+    <nav>
+        <div>
+            <div id="logo">
+                <img src="/images/logo.png">
+            </div>
+            <div id="logo-name">
+                Codeial
+            </div>
+        </div>
+        
+        <input type="checkbox" id="click" hidden>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <% if(locals.user) {%>
+                <li><a href="/users/profile">Profile</a></li>
+                <li><a href="/users/sign-out">Sign Out</a></li>
+                <div id="profile-pic">
+                    <img src="/images/user.png">
+                    <div>Sign Out</div>
+                </div>
+                <%}else{%>
+                    <li>
+                        <a href="/users/sign-in">Sign In</a>
+                    </li>
+                    <li>
+                        <a href="/users/sign-up">Sign Up</a>
+                    </li>
+                    <%}%>
+        </ul>
+        <label for="click" id="menu-button"><i class="fas fa-bars"></i></label>
+    </nav>
 </header>
