--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -11,6 +11,8 @@
         <h1>
             Codeial / Profile Page
         </h1>
+        <p><%= user.name%></p>
+        <p><%= user.email%></p>
     <!-- <%- include('_footer'); %>
         
     </body>
