--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,14 @@
         <!-- <%- include('_header'); %> -->
 
         <h1>Codeial / <%= title %></h1>
+        <section id="feed-post">
+            <h4>Posts</h4>
+            <form action="" method="POST" id="new-post-form">
+                <caption>Add Post</caption>
+                <textarea name="content" cols="30" rows="3"></textarea>
+                <input type="submit" value="Post"> 
+            </form>
+        </section>
 
         <!-- <%- include('_footer'); %> -->
     
