--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -7,12 +7,16 @@
 
     <body>
         <%- include('_header'); %> -->
-
+        <link rel="stylesheet" type="text/css" href="/css/user_profile.css">
         <h1>
             Codeial / Profile Page
         </h1>
-        <p><%= user.name%></p>
-        <p><%= user.email%></p>
+
+ 
+        <%- include('_profile.ejs') -%>
+
+        
+        <script type="text/javascript" src="/javascripts/user_profile.js"></script>
     <!-- <%- include('_footer'); %>
         
     </body>
