--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -16,7 +16,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <% if(locals.user) {%>
-                <li><a href="/users/profile">Profile</a></li>
+                <li><a href="/users/profile/<%= locals.user.id%>">Profile</a></li>
                 <li><a href="/users/sign-out">Sign Out</a></li>
                 <div id="profile-pic">
                     <img src="/images/user.png">
