--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,16 @@
                 </div>
             </main>
             <aside>
-    
+                <div id="user-friends">
+                    <h4>
+                        Friends
+                    </h4>
+                    <%for (u of all_users){%>
+                        <div class="user-friend">
+                            <a href="/users/profile/<%= u.id %>"><%=u.name%></a>
+                        </div>
+                    <% } %>
+                </div>
             </aside>
         </div>
         
