--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,8 @@
     <title>
         <%= title %>
     </title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" integrity="sha512-0p3K0H3S6Q4bEWZ/WmC94Tgit2ular2/n0ESdfEX8l172YyQj8re1Wu9s/HT9T/T2osUw5Gx/6pAZNk3UKbESw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.js" integrity="sha512-mgZL3SZ/vIooDg2mU2amX6NysMlthFl/jDbscSRgF/k3zmICLe6muAs7YbITZ+61FeUoo1plofYAocoR5Sa1rQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,6 +18,12 @@
     <%- include('_header'); %>
         <div id="gap"><span>Online Social Baithak </span></div>
         <div id="gap-fill"></div>
+
+        <!-- <% if(flash.success && flash.success.length >0 ){ %>
+                <h5>
+                    <%= flash.success%>
+                </h5>
+        <%}%> -->
         <%- body %>
 
 
@@ -33,6 +40,26 @@
                 <script type="text/javascript" src="/javascripts/header.js"></script>
                 <script type="text/javascript" src="/javascripts/layout.js"></script>
                 <%- script %>
+                <script>
+                    <% if(flash.success && flash.success.length >0 ){ %>
+                        new Noty({
+                            theme:'relax',
+                            type: 'success',
+                            layout: 'bottomRight',
+                            text:  "<%= flash.success %>",
+                            timeout : 1500
+                        }).show();
+                    <%}%>
+                    <% if(flash.err && flash.err.length >0 ){ %>
+                        new Noty({
+                            theme:'relax',
+                            type: 'error',
+                            layout: 'bottomRight',
+                            text:  "<%= flash.err %>",
+                            timeout : 1500
+                        }).show();
+                    <%}%>
+                </script>
 
 </body>
 
