--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,8 +21,9 @@
                     </form>
                 </div>
                 <%  } %>
+                <h4 id="post-h4">Posts </h4>
                 <div class="posts-container">
-                    <h4>Posts </h4>
+                    
                     <%  for (post of posts){%>
                         <%- include('_post.ejs') -%>
                     <%  }%> 
