--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -19,7 +19,7 @@
                 <li><a href="/users/profile/<%= locals.user.id%>">Profile</a></li>
                 <li><a href="/users/sign-out">Sign Out</a></li>
                 <div id="profile-pic">
-                    <img src="/images/user.png">
+                    <img src="<%= user.avatar %>" alt="<%= user.name%>">
                     <div>Sign Out</div>
                 </div>
                 <%}else{%>
