--- a/views/_profile.ejs
+++ b/views/_profile.ejs
@@ -9,9 +9,10 @@
 
             <div class="profile-form">
                 <i class="fas fa-times"></i>
-                <form class="form-control" action="/users/update/<%= profile_user.id%> " method="POST">
+                <form class="form-control" action="/users/update/<%= profile_user.id%> " enctype="multipart/form-data" method="POST">
                     <input class="form-control" type="text" name="name" value="<%=profile_user.name%>" required>
                     <input class="form-control" type="email" name="email" value="<%= profile_user.email%>" required>
+                    <input class="form-control" type="file" name="avatar" placeholder="Profile Picture">
                     <input class="btn btn-danger" type="submit" value="Update">
                 </form>
             </div>
