passport jwt and google login

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,4 +23,7 @@
             <script type="text/javascript" src="/javascripts/signup.js"></script>
         </form>
     </div>
+    <p>
+        <a href="/users/auth/google">Google SignIn / SignUp</a>
+    </p>
 </div>
