Gulp minifise assets

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,10 +1,10 @@
 <header>
 
-    <link type="text/css" rel="stylesheet" href="/css/header.css">
+    <link type="text/css" rel="stylesheet" href="<%= assetPath('css/header.css')%>">
     <nav>
         <div>
             <div id="logo">
-                <img src="/images/logo.png">
+                <img src="<%= assetPath('images/logo.png')%>">
             </div>
             <div id="logo-name">
                 Codeial
