--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     </head> -->
 
     <body>
-        <link rel="stylesheet" type="text/css" href="/css/home.css">
+        <link rel="stylesheet" type="text/css" href="<%= assetPath('css/home.css')%>">
         
         <!-- <%- include('_header'); %> -->
         <div class="home-container">
@@ -46,6 +46,6 @@
 
         <!-- <%- include('_footer'); %> -->
         
-        <script type="text/javascript" src="/javascripts/home.js"></script>
+        <script type="text/javascript" src="<%= assetPath('javascripts/home.js')%>"></script>
     </body>
 <!-- </html> -->
