--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <%- style %>
-        <link rel="stylesheet" type="text/css" href="/css/layout.css">
+        <link rel="stylesheet" type="text/css" href="<%= assetPath('css/layout.css')%>">
 </head>
 
 <body>
@@ -37,8 +37,8 @@
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
                     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
                     crossorigin="anonymous"></script>
-                <script type="text/javascript" src="/javascripts/header.js"></script>
-                <script type="text/javascript" src="/javascripts/layout.js"></script>
+                <script type="text/javascript" src="<%= assetPath('javascripts/header.js')%>"></script>
+                <script type="text/javascript" src="<%= assetPath('javascripts/layout.js')%>"></script>
                 <%- script %>
                 <script>
                     <% if(flash.success && flash.success.length >0 ){ %>
