--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="/css/signup.css">
+<link rel="stylesheet" type="text/css" href="<%= assetPath('css/signup.css')%>">
 
 <link   rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
@@ -25,7 +25,7 @@
             <div id="button">
                 <input class="btn-primary" type="submit" value="Sign Up!">
             </div>
-            <script type="text/javascript" src="/javascripts/signup.js"></script>
+            <script type="text/javascript" src="<%= assetPath('javascripts/signup.js')%>"></script>
         </form>
         <div class="row">
             <div class="col-md" style="text-align:center;">
